@@ -1264,7 +1264,10 @@ class GUI(object):
         # read fofc maps
         # - read ccp4 map: 0 - 2fofc map, 1 - fofc.map
         # read 2fofc map last so that one can change its contour level
-        if os.path.isfile(os.path.join(self.project_directory, self.xtalID, '2fofc.map')):
+#        if os.path.isfile(os.path.join(self.project_directory, self.xtalID, '2fofc.map')):
+        # coot 0.9 does not handle P1 maps well, so now looking for non-existent map in order to trigger
+        # map calculation from mtz file
+        if os.path.isfile(os.path.join(self.project_directory, self.xtalID, '2fofc_??????.map')):
             coot.set_colour_map_rotation_on_read_pdb(0)
             coot.set_default_initial_contour_level_for_difference_map(3)
             coot.handle_read_ccp4_map(os.path.join(self.project_directory, self.xtalID, 'fofc.map'), 1)
@@ -1273,7 +1276,8 @@ class GUI(object):
             coot.set_last_map_colour(0, 0, 1)
         else:
             # try to open mtz file with same name as pdb file
-            coot.set_default_initial_contour_level_for_map(1)
+#            coot.set_default_initial_contour_level_for_map(1)
+            coot.set_colour_map_rotation_on_read_pdb(0)
             #            if not os.path.isfile(os.path.join(self.project_directory,self.xtalID,self.mtz_style)):
             #                os.chdir(os.path.join(self.project_directory,self.xtalID))
             #                if not os.path.isfile('REFINEMENT_IN_PROGRESS'):
