@@ -1,5 +1,6 @@
 v1.7.14 (24/09/2020)
 - added option for ligand occupancy refinement in BUSTER
+- XChemCootBuster: reading of (2)fofc.maps disabled because Coot 0.9 does not handle P1 maps well
 
 v1.7.13 (23/09/2020)
 - bug fix: use wavelength read from (.free).mtz during model MMCIF preparation when updating SF MMCIF
